[metadata]
name = dl_pkg
version = 0.1.0
author = Okay
author_email = StudioGhili@gmail.com
description = A small package implementing various neural learning rules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NandeeshaHK/tensorflew
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tensor
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.packages.find]
where = tensor

