[metadata]
name = tensorflew
version = 0.1.0
author = Okay
author_email = StudioGhili@gmail.com
description = A small package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/username/tensorflew.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tensorflew
packages = find:
python_requires = >=3.7
install_requires =
    pyperclip

[options.packages.find]
where = tensorflew

